try to solve overflowing VH bug on real phone

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -4,6 +4,8 @@ html,
 body,
 #root {
   height: var(--app-height);
+  overflow: hidden;
+  position: fixed;
 }
 
 #root {
